[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["Piny4man <development@pinya.dev>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://git.pinya.dev/piny4man/grrs"
repository = "https://git.pinya.dev/piny4man/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
ansi_term = "0.12"
indicatif= "0.17.2"
env_logger="0.10.0"
log = "0.4.17"

[dev-dependencies]
assert_cmd = "2.0.7"
assert_fs = "1.0.10"
predicates = "2.1.4"
